--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Vicky's Portfolio</h1>
-    <h2><a href="../4.4+Resume/resume.html"></a>I'm a Landscape Architect</h2>
+    <h2><a href="../4.4+Resume/resume.html"> I'm a Landscape Architect</a></h2>
     <hr />
     <h3><a href="./public/movie-ranking.html"> Movie Ranking Project </a></h3>
     <img src="./assets/images/movie-ranking.png" alt="movie ranking project preview" height="200" />
